# Clew-by-Custos

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml  tasks.py
.claude/: settings.local.json
docs/: Clew_1단계_작업키트.md  Clew_2단계_작업키트.md
eval/: calibrate.py  diagnose_top_prog.py  evaluate.py
eval/generators/: build_set.py
eval/generators/patterns/: __init__.py  base.py  pingpong_aba.py  regen_handoff.py  repeat_node.py  requery_known.py
examples/: README.md  sample_otel_trace.json
field_test/: REAL_PROBE_LOG.md  collapse.py  d5_clean.json  d5_report.md  d5_waste.json  diag_graph_structure.py  diag_requery_clean.py  dump_otlp.json  dump_real_otlp.py  dump_sdk_json.json  make_d5_fixtures.py  real_app.py  real_clean.json  real_pingpong.json  real_repeat_node.json  real_requery_clean.json  real_requery_known.json  run_field_test.py  run_field_test_cosine_probe.py  run_field_test_router_fp.py  run_field_test_waste.py  run_real_probe.py  verify_readme_output.json  verify_readme_snippet.py
src/clew/: __init__.py  __main__.py  capture.py  io.py  model.py
src/clew/detect/: __init__.py  cascade.py  semantic.py  (+1 more)
tests/: conftest.py  test_build_set.py  test_build_set_regression.py  test_calibrate.py  test_cascade.py  test_dod.py  test_evaluate_reproducible.py  test_field_regressions.py  test_generator.py  test_langgraph_adapter.py  test_model.py  test_no_label_leakage.py  test_otel_json_ingest.py  test_report_cli.py  test_roundtrip.py  test_semantic_determinism.py  test_structural.py
validation/: CALIBRATION_LOG.md  CRITERIA_FROZEN.md  EVAL_RUNS.md
(+7 files in other folders)
