[project]
name = "clew"
version = "0.1.0"
description = "Detect wasteful cycles in multi-agent traces (Custos / Clew, S0 MVP)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
adapter = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "openinference-instrumentation-langchain>=0.1",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-api>=1.25",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
